fixed errors of leaderboard

--- a/templates/administration/sheet/leaderboard.html
+++ b/templates/administration/sheet/leaderboard.html
@@ -5,6 +5,11 @@
 Leaderboard | {{ sheet.name }}
 {% endblock %}
 
+{% block sheet_active %}
+active
+{% endblock %}
+
+
 {% block body %}
 
 <div class="container-fluid">
