--- a/templates/practice/problem.html
+++ b/templates/practice/problem.html
@@ -536,13 +536,10 @@
                     name: "C++"
                 },];
 
-            const baseUrl = "{% url 'get_driver_code' question.slug languageId %}";
+            const baseUrl = "{% url 'get_driver_code' question.id languageId %}";
 
             // Function to set editor content based on selected language
             function setEditorContent(languageId) {
-
-                console.log("LANGUAGE ID:", languageId);
-
                 const url = baseUrl.replace("languageId", languageId);
 
                 console.log("SENT URL FOR DRIVER CODE: ", url);
@@ -555,7 +552,6 @@
                             console.log(data);
                             editor.setValue(data.code, -1);
                         } else {
-                            console.log(data);
                             editor.setValue("// Driver code not found for this language", -1); // Fallback
                         }
                     })
@@ -579,9 +575,6 @@
             // Trigger when the language is changed
             languageSelect.change(function () {
                 const selectedLanguageId = $(this).val();
-
-                console.log("Language id after change: ", selectedLanguageId);
-
                 setEditorContent(selectedLanguageId); // Fetch and set driver code for the new language
 
                 // reset the output div
