--- a/templates/administration/practice/test_code.html
+++ b/templates/administration/practice/test_code.html
@@ -504,12 +504,10 @@ Test Code | {{ question.title }}
                 name: "C++"
             },];
 
-        const baseUrl = "{% url 'get_driver_code' question.id 0 %}";
+        const baseUrl = "{% url 'driver_code' question.slug %}";
 
         // Function to set editor content based on selected language
         function setEditorContent(languageId) {
-            const url = baseUrl.replace("0", languageId); 
-
             // Fetch the driver code asynchronously
             fetch(url)
                 .then((response) => response.json())
