--- a/templates/administration/sheet/sheet.html
+++ b/templates/administration/sheet/sheet.html
@@ -313,7 +313,9 @@ active
             console.log(sheetId, questionId);
             if (!sheetId || !questionId) return;
 
-            fetch("{% url 'add_question_to_sheet' 0 1 %}".replace("0", sheetId).replace("1", questionId), {
+            const url = "{% url 'add_question_to_sheet' 0 1 %}".replace("/0", `/${sheetId}`).replace("/1", `/${questionId}`);
+            console.log(url);
+            fetch(url, {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
@@ -321,6 +323,7 @@ active
                 },
             })
                 .then((response) => {
+                    console.log(response);
                     if (response.ok) {
                         // Successfully added; refresh questions
                         document.querySelector(`button[data-question-id="${questionId}"]`).parentElement.parentElement.remove();
