added the feedback page for admin as well

--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -223,6 +223,15 @@
                             </a>
                         </li>
 
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" href="{% url 'instructor_feedbacks' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-list"></i>
+                                </span>
+                                <span class="hide-menu">Feedbacks</span>
+                            </a>
+                        </li>
+
                         {% comment %}
 
                         <li class="sidebar-item">
